--- a/src/Mm0205.TestImageGenerator.Cli/Mm0205.TestImageGenerator.Cli.csproj
+++ b/src/Mm0205.TestImageGenerator.Cli/Mm0205.TestImageGenerator.Cli.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="FluentResults" Version="3.14.0" />
       <PackageReference Include="FluentValidation" Version="11.2.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+      <PackageReference Include="SkiaSharp" Version="2.88.3" />
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
       <PackageReference Include="System.IO.Abstractions" Version="17.2.3" />
     </ItemGroup>
